[gd_scene load_steps=8 format=2]

[ext_resource path="res://Picture1.png" type="Texture" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Picture2.png" type="Texture" id=3]
[ext_resource path="res://HowToPlay.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[node name="HowToPlayWindow" type="Control"]
margin_right = 1000.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dimmer" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0.556863 )
margin_right = 1000.0
margin_bottom = 600.0

[node name="DisplayWindow" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -264.0
margin_right = 450.0
margin_bottom = 282.0
custom_fonts/title_font = SubResource( 1 )
custom_colors/title_color = Color( 0.392157, 0.392157, 0.105882, 1 )
window_title = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="Sprite" parent="DisplayWindow"]
position = Vector2( 452.286, 255.405 )
texture = ExtResource( 1 )

[node name="Text2" type="Sprite" parent="DisplayWindow"]
visible = false
position = Vector2( 449.815, 223.758 )
texture = ExtResource( 3 )

[node name="DoneButton" type="Button" parent="DisplayWindow"]
margin_left = 762.0
margin_top = 498.0
margin_right = 828.0
margin_bottom = 535.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="DisplayWindow"]
margin_left = 837.0
margin_top = 498.0
margin_right = 878.0
margin_bottom = 535.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.74902, 0.74902, 0.658824, 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="popup_hide" from="DisplayWindow" to="." method="_on_DisplayWindow_popup_hide"]
[connection signal="pressed" from="DisplayWindow/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="DisplayWindow/NextButton" to="." method="_on_NextButton_pressed"]
